2004-09-28 Scott Dattalo <scott@dattalo.com>
	* gui/gui_main.cc, gui/gui_menu.cc, gui/gui_object.cc, 
	gui/gui_object.h, gui/gui_regwin.cc, gui/gui_src.h,
	gui/gui_src_asm.cc, src/gpsim_interface.h, M src/interface.cc:
	- Fixed a few bugs caused by upgrading to GTK+ 2.x:
	  -- Window state was not being saved
	  -- Register window font was fouled up
	  -- Source browser pixel position calculations are different
          There are still some other bugs that need to be fixed: 
	  -- The breadboard window somehow prevents the Source browser
	     window from opening
	  -- <control>Q no longer quits
	  -- scrolling in source browser only works if the scroll pane
	     has focus
	  -- The register window cheats in guessing character width.

2004-09-24 Scott Dattalo <scott@dattalo.com>
	* src/processor.cc: save_state() was skipping address 0.
	* src/registers.cc: Bit string encoding has been enhanced
	
2004-09-15 Scott Dattalo <scott@dattalo.com>
	* gui/gui_regwin.h, gui/gui_regwin.cc: max allowable registers
	is 64k (used to be 4k)
	* gui/gui_src_asm.cc: improperly initialized instructions were
	causing a core dump.

2004-09-19 Borut Razem <borut.razem@siol.net>
	* configure.in: gpsim is configured to link with GTK+ 2.x by default.
	  Use --enable-gtk1 for linking with GTK+ 1.x (deprecated).

2004-09-15 Scott Dattalo <scott@dattalo.com>
	* gui/gui_regwin.cc, gui/gui_src_asm.cc: Fixed ranging checks.

2004-09-15 Scott Dattalo <scott@dattalo.com>
	* src/processor.cc, src/processor.h, src/pic-processor.cc:
	getWriteTT and getReadTT used to return TraceType objects,
	but now they return unsigned ints.

2004-09-15 Scott Dattalo <scott@dattalo.com>
	* src/processor.cc, src/trace.cc, gui/gui_src_opcode.cc:
	- 18f processors' addresses were off by a factor of two in
	disassembly operations.
	
2004-09-14 Borut Razem <borut.razem@siol.net>
	* cli/cli.cvproj, src/src.vcproj, plat/win32/gpsim.def: MSVC sync
	* cli/makefile.mingw, src/makefile.mingw: MinGW sync